[project]
name = "tinyproxy-ng"
version = "0.1.0"
description = "Lightweight asynchronous HTTP/HTTPS forward proxy server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9",
    "aiohttp-socks>=0.8.4",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern syntax sugaring)
    "B",   # flake8-bugbear (common bug patterns)
]
ignore = [
    "E501", # line too long (handled by formatter separately)
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["proxy_server", "auth", "config", "http_forward", "tunnel", "dashboard", "stats", "fetch_ghproxy_nodes"]

[tool.mypy]
python_version = "3.9"
strict_optional = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
follow_imports = "silent"
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "aiohttp_socks.*",
    "yaml",
    "tests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"